fix: Added background color & fixed alignment

--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -5,6 +5,7 @@
 
 body {
   @apply leading-[normal] m-0;
+  background-color: #ffead3;
 }
 *,
 ::before,
