--- a/frontend/src/register/FrameA.css
+++ b/frontend/src/register/FrameA.css
@@ -149,6 +149,7 @@
   /* position: relative; */
 
   padding-left: 100px;
+  padding-bottom: 1.2rem;
   display: flex;
   flex-direction: row;
   justify-content: center;
